// Cursor AI Server Protocol Buffers Schema
// Reverse-engineered from cursor-always-local extension
// Generated: 2024-12-19

syntax = "proto3";

package aiserver.v1;

// ============================================================================
// Core Chat Service
// ============================================================================

service ChatService {
  // Main streaming chat with tools endpoint (BiDi streaming)
  rpc StreamUnifiedChatWithTools(stream StreamUnifiedChatRequestWithTools) 
      returns (stream StreamUnifiedChatResponseWithTools);
  
  // SSE variant (Server streaming)
  rpc StreamUnifiedChatWithToolsSSE(StreamUnifiedChatRequestWithTools) 
      returns (stream StreamUnifiedChatResponseWithTools);
  
  // Basic streaming chat (no tools)
  rpc StreamUnifiedChat(StreamUnifiedChatRequest) 
      returns (stream StreamUnifiedChatResponse);
  
  // Idempotent variants
  rpc StreamUnifiedChatWithToolsIdempotent(stream StreamUnifiedChatRequestWithToolsIdempotent) 
      returns (stream StreamUnifiedChatResponseWithToolsIdempotent);
}

// ============================================================================
// Request Messages
// ============================================================================

// Main request wrapper with tools support
message StreamUnifiedChatRequestWithTools {
  // Field 1: The main chat request
  StreamUnifiedChatRequest stream_unified_chat_request = 1;
  
  // Field 2: Results from client-side tool execution
  ClientSideToolV2Result client_side_tool_v2_result = 2;
}

// The core chat request
message StreamUnifiedChatRequest {
  // Field 1: Conversation history
  repeated ConversationMessage conversation = 1;
  
  // Field 30: Full conversation headers (metadata only)
  repeated ConversationMessageHeader full_conversation_headers_only = 30;
  
  // Field 2: Allow scanning long files
  bool allow_long_file_scan = 2;
  
  // Field 3: Explicitly provided context
  ExplicitContext explicit_context = 3;
  
  // Field 4: Client can handle filenames after language IDs
  bool can_handle_filenames_after_language_ids = 4;
  
  // Field 5: Model selection and configuration
  ModelDetails model_details = 5;
  
  // Field 6: Linter errors in context
  LinterErrors linter_errors = 6;
  
  // Field 7: Documentation identifiers to include
  string documentation_identifiers = 7;
  
  // Field 8: Enable web search
  string use_web = 8;
  
  // Field 9: External links
  repeated ComposerExternalLink external_links = 9;
  
  // Field 10: Project context
  repeated ConversationMessage project_context = 10;
  
  // Field 11: Diffs for compressing files
  repeated FileDiffForCompression diffs_for_compressing_files = 11;
  
  // Field 12: Compress edits
  bool compress_edits = 12;
  
  // Field 13: Enable caching
  bool should_cache = 13;
  
  // Field 14: Multi-file linter errors
  repeated LinterErrors multi_file_linter_errors = 14;
  
  // Field 15: Current file information
  CurrentFileInfo current_file = 15;
  
  // Field 16: Recent edits
  RecentEdits recent_edits = 16;
  
  // Field 17: Use reference composer diff prompt
  bool use_reference_composer_diff_prompt = 17;
  
  // Field 18: File diff histories
  repeated FileDiffHistory file_diff_histories = 18;
  
  // Field 19: Use new compression scheme
  bool use_new_compression_scheme = 19;
  
  // Field 20: Additional ranked context
  repeated AdditionalRankedContext additional_ranked_context = 20;
  
  // Field 21: Chat quotes
  repeated ChatQuote quotes = 21;
  
  // Field 22: Is this a chat (vs composer)
  bool is_chat = 22;
  
  // Field 23: Conversation ID
  string conversation_id = 23;
  
  // Field 72: Replying to a specific request
  string replying_to_request_id = 72;
  
  // Nested message types
  message RecentEdits {
    repeated CodeBlockInfo code_blocks = 1;
    repeated FileInfo files = 2;
    
    message CodeBlockInfo {
      string file_path = 1;
      string content = 2;
      int32 start_line = 3;
      int32 end_line = 4;
    }
    
    message FileInfo {
      string path = 1;
      string language_id = 2;
    }
  }
  
  message FullFileCmdKOptions {
    bool enabled = 1;
    string mode = 2;
  }
  
  message CodeSearchResult {
    string file_path = 1;
    string content = 2;
    float score = 3;
  }
  
  message RedDiff {
    string file_path = 1;
    string diff = 2;
  }

  // Enums for mode selection
  enum UnifiedMode {
    UNIFIED_MODE_UNSPECIFIED = 0;
    UNIFIED_MODE_CHAT = 1;
    UNIFIED_MODE_COMPOSER = 2;
    UNIFIED_MODE_CMD_K = 3;
  }
  
  enum ThinkingLevel {
    THINKING_LEVEL_UNSPECIFIED = 0;
    THINKING_LEVEL_NONE = 1;
    THINKING_LEVEL_BASIC = 2;
    THINKING_LEVEL_EXTENDED = 3;
  }
}

// Idempotent request variant
message StreamUnifiedChatRequestWithToolsIdempotent {
  // Field 1: Client chunk containing the request
  ClientChunk client_chunk = 1;
  
  // Field 2: Abort signal (empty message)
  AbortSignal abort = 2;
  
  // Field 3: Close signal (empty message)
  CloseSignal close = 3;
  
  // Field 4: Idempotency key
  string idempotency_key = 4;
  
  // Field 5: Sequence number
  int64 seqno = 5;
}

// Signal messages (replacing google.protobuf.Empty)
message AbortSignal {}
message CloseSignal {}

// ============================================================================
// Response Messages
// ============================================================================

// Main response wrapper with tools
message StreamUnifiedChatResponseWithTools {
  // Field 1: Tool call from server
  ClientSideToolV2Call client_side_tool_v2_call = 1;
  
  // Field 2: The actual chat response
  StreamUnifiedChatResponse stream_unified_chat_response = 2;
  
  // Field 3: Conversation summary
  ConversationSummary conversation_summary = 3;
  
  // Field 4: User rules applied
  UserRules user_rules = 4;
  
  // Field 5: Stream start marker
  StreamStart stream_start = 5;
  
  // Field 6: Tracing context
  SpanContext tracing_context = 6;
  
  // Field 7: Event ID
  string event_id = 7;
}

// The core chat response
message StreamUnifiedChatResponse {
  // Field 1: Response text (streamed)
  string text = 1;
  
  // Field 2: Final tool results
  repeated FinalToolResult final_tool_results = 2;
  
  // Field 3: Image descriptions
  repeated ImageDescription image_descriptions = 3;
  
  // Field 4: Used code references
  repeated UsedCode used_code = 4;
  
  // Field 5: Chunk identity
  ChunkIdentity chunk_identity = 5;
  
  message FinalToolResult {
    string tool_name = 1;
    string result = 2;
    bool success = 3;
  }
  
  message ImageDescription {
    string image_id = 1;
    string description = 2;
  }
  
  message UsedCode {
    string file_path = 1;
    int32 start_line = 2;
    int32 end_line = 3;
    string content = 4;
  }
  
  message ChunkIdentity {
    string chunk_id = 1;
    int32 index = 2;
  }
}

// Idempotent response variant
message StreamUnifiedChatResponseWithToolsIdempotent {
  StreamUnifiedChatResponseWithTools response = 1;
  int64 seqno = 2;
  bool is_final = 3;
}

// ============================================================================
// Conversation Messages
// ============================================================================

// A single message in a conversation
message ConversationMessage {
  // Field 1: Message text content
  string text = 1;
  
  // Field 2: Message type (user/assistant/system)
  MessageType type = 2;
  
  // Field 3: Attached code chunks
  repeated CodeChunk attached_code_chunks = 3;
  
  // Field 4: Codebase context chunks
  repeated CodeBlock codebase_context_chunks = 4;
  
  // Field 5: Commit references
  repeated CommitReference commits = 5;
  
  // Field 6: Pull request references
  repeated PullRequestReference pull_requests = 6;
  
  // Field 7: Git diffs
  repeated GitDiff git_diffs = 7;
  
  // Field 8: Assistant suggested diffs
  repeated SuggestedDiff assistant_suggested_diffs = 8;
  
  // Field 9: Interpreter results
  repeated InterpreterResult interpreter_results = 9;
  
  // Field 10: Images
  repeated ImageProto images = 10;
  
  // Field 11: Attached folder paths
  repeated string attached_folders = 11;
  
  // Field 12: Approximate lint errors
  repeated ApproximateLintError approximate_lint_errors = 12;
  
  // Field 13: Bubble ID (unique message ID)
  string bubble_id = 13;
  
  enum MessageType {
    MESSAGE_TYPE_UNSPECIFIED = 0;
    MESSAGE_TYPE_USER = 1;
    MESSAGE_TYPE_ASSISTANT = 2;
    MESSAGE_TYPE_SYSTEM = 3;
    MESSAGE_TYPE_TOOL = 4;
  }
  
  message CodeChunk {
    string file_path = 1;
    int32 start_line = 2;
    int32 end_line = 3;
    string content = 4;
    string language_id = 5;
    
    CodeChunkGitContext git_context = 6;
    
    message CodeChunkGitContext {
      repeated CodeChunkGitInfo git_info = 1;
      
      message CodeChunkGitInfo {
        string commit_sha = 1;
        string branch_name = 2;
      }
    }
  }
  
  message ApproximateLintError {
    string file_path = 1;
    int32 line = 2;
    string message = 3;
    string severity = 4;
  }
  
  message ComposerContext {
    repeated string files = 1;
    string mode = 2;
  }
  
  message EditTrailContext {
    repeated string edited_files = 1;
    string description = 2;
  }
  
  message ToolResult {
    string tool_name = 1;
    string result = 2;
    bool success = 3;
    string error = 4;
  }
  
  message Thinking {
    string content = 1;
    int32 duration_ms = 2;
  }
}

// Message header (lightweight metadata)
message ConversationMessageHeader {
  string bubble_id = 1;
  ConversationMessage.MessageType type = 2;
  int64 timestamp = 3;
}

// ============================================================================
// Tool Messages
// ============================================================================

// Tool call from server to client
message ClientSideToolV2Call {
  string tool_name = 1;
  string tool_id = 2;
  string arguments_json = 3;
  
  // Known tool types
  enum ToolType {
    TOOL_TYPE_UNSPECIFIED = 0;
    TOOL_TYPE_EDIT_FILE = 1;
    TOOL_TYPE_CREATE_FILE = 2;
    TOOL_TYPE_DELETE_FILE = 3;
    TOOL_TYPE_READ_FILE = 4;
    TOOL_TYPE_RUN_TERMINAL = 5;
    TOOL_TYPE_SEARCH_FILES = 6;
    TOOL_TYPE_LIST_DIR = 7;
    TOOL_TYPE_CODEBASE_SEARCH = 8;
    TOOL_TYPE_GREP_SEARCH = 9;
    TOOL_TYPE_FILE_SEARCH = 10;
    TOOL_TYPE_FETCH_RULES = 11;
    TOOL_TYPE_WEB_SEARCH = 12;
    TOOL_TYPE_MCP = 13;
  }
}

// Tool result from client to server
message ClientSideToolV2Result {
  string tool_id = 1;
  string result_json = 2;
  bool success = 3;
  string error_message = 4;
}

// ============================================================================
// Supporting Types
// ============================================================================

message ExplicitContext {
  repeated string file_paths = 1;
  repeated string folder_paths = 2;
  repeated string web_urls = 3;
  repeated string doc_identifiers = 4;
}

message ModelDetails {
  string model_name = 1;
  string provider = 2;
  int32 max_tokens = 3;
  float temperature = 4;
  bool supports_tools = 5;
  bool supports_images = 6;
}

message LinterErrors {
  repeated LinterError errors = 1;
  
  message LinterError {
    string file_path = 1;
    int32 line = 2;
    int32 column = 3;
    string message = 4;
    string severity = 5;
    string code = 6;
  }
}

message ComposerExternalLink {
  string url = 1;
  string title = 2;
  string content = 3;
}

message CurrentFileInfo {
  string path = 1;
  string content = 2;
  string language_id = 3;
  int32 cursor_line = 4;
  int32 cursor_column = 5;
  
  repeated NotebookCell notebook_cells = 6;
  
  message NotebookCell {
    string content = 1;
    string language = 2;
    int32 index = 3;
  }
}

message FileDiffForCompression {
  string file_path = 1;
  string diff = 2;
}

message FileDiffHistory {
  string file_path = 1;
  repeated string diffs = 2;
}

message AdditionalRankedContext {
  string file_path = 1;
  string content = 2;
  float score = 3;
}

message ChatQuote {
  string text = 1;
  string source = 2;
}

message ConversationSummary {
  string summary = 1;
  repeated string key_topics = 2;
  int32 message_count = 3;
}

message UserRules {
  repeated Rule rules = 1;
  
  message Rule {
    string name = 1;
    string content = 2;
    bool enabled = 3;
  }
}

message StreamStart {
  string padding = 1;
}

message SpanContext {
  string trace_id = 1;
  string span_id = 2;
  uint32 trace_flags = 3;
  string trace_state = 4;
}

message ClientChunk {
  StreamUnifiedChatRequestWithTools request = 1;
  int64 chunk_index = 2;
}

message CodeBlock {
  string file_path = 1;
  string content = 2;
  int32 start_line = 3;
  int32 end_line = 4;
  string language_id = 5;
  
  Signatures signatures = 6;
  
  message Signatures {
    repeated string function_signatures = 1;
    repeated string class_signatures = 2;
  }
}

message CommitReference {
  string sha = 1;
  string message = 2;
  string author = 3;
  int64 timestamp = 4;
}

message PullRequestReference {
  string number = 1;
  string title = 2;
  string url = 3;
  string state = 4;
}

message GitDiff {
  string file_path = 1;
  string diff = 2;
  string ref_from = 3;
  string ref_to = 4;
}

message SuggestedDiff {
  string file_path = 1;
  string diff = 2;
  string description = 3;
}

message InterpreterResult {
  string code = 1;
  string output = 2;
  string language = 3;
  bool success = 4;
}

message ImageProto {
  string id = 1;
  bytes data = 2;
  string mime_type = 3;
  string alt_text = 4;
}

